syntax = "proto3";

option go_package = "github.com/erkrnt/symphony/api";

package api;

enum ResourceStatus {
  UNKNOWN_RESOURCE_STATUS = 0;
  REVIEW_IN_PROGRESS = 1;
  REVIEW_COMPLETED = 2;
  REVIEW_FAILED = 3;
  CREATE_IN_PROGRESS = 4;
  CREATE_COMPLETED = 5;
  CREATE_FAILED = 6;
}

enum ResourceType {
  UNKNOWN_RESOURCE_TYPE = 0;
  LOGICAL_VOLUME = 1;
  PHYSICAL_VOLUME = 2;
  VOLUME_GROUP = 3;
}

message LogicalVolume {
  string ID = 1;
  string ServiceID = 2;
  int64 Size = 3;
  ResourceStatus Status = 4;
  string TargetAddr = 5;
  string VolumeGroupID = 6;
}

message LogicalVolumeMetadata {
  string LvName = 1;
  string VgName = 2;
  string LvAttr = 3;
  string LvSize = 4;
  string PoolLv = 5;
  string Origin = 6;
  string DataPercent = 7;
  string MetadataPercent = 8;
  string MovePv = 9;
  string MirrorLog = 10;
  string CopyPercent = 11;
  string ConvertLv = 12;
}

message PhysicalVolume {
  string ID = 1;
  string ServiceID = 2;
  string DeviceName = 3;
  ResourceStatus Status = 4;
}

message PhysicalVolumeMetadata {
  string PvName = 1;
  string VgName = 2;
  string PvFmt = 3;
  string PvAttr = 4;
  string PvSize = 5;
  string PvFree = 6;
}

message VolumeGroup {
  string ID = 1;
  string ServiceID = 2;
  string PhysicalVolumeID = 3;
  ResourceStatus Status = 4;
}

message VolumeGroupMetadata {
  string VgName = 1;
  string PvCount = 2;
  string LvCount = 3;
  string SnapCount = 4;
  string VgAttr = 5;
  string VgSize = 6;
  string VgFree = 7;
}
